# vibed-santa

./: .appconfig.template.yaml  .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  devcontainer.json  docker-compose.yml  pyproject.toml  translations.yaml
.devcontainer/: devcontainer.json
