[tool.poetry]
name = "secret-santa"
version = "0.1.0"
description = "A simple Secret Santa web application using Streamlit"
authors = ["Massimiliano Botticelli <>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.28.0"
pyyaml = "^6.0"
tinydb = "^4.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
